--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "echo \"no build step\""
   },
   "dependencies": {
-    "@supabase/supabase-js": "2.46.1"
+    "@supabase/supabase-js": "^2.46.1",
+    "web-push": "^3.6.6"
   },
   "engines": {
     "node": ">=18"
