--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,23 @@
   publish = "."
   functions = "netlify/functions"
 
-# SPA routing
+# Serve real static files as-is
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/js/*"
+  to = "/js/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/service-worker.js"
+  to = "/service-worker.js"
+  status = 200
+
+# SPA fallback for everything else (must be LAST)
 [[redirects]]
   from = "/*"
   to = "/index.html"
